[package]
name = "simply"
version = "0.2.0"
authors = ["Eric Burden <eric.w.burden@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Simply Script Interpreter"
readme = "README.md"
repository = "https://github.com/ericwburden/simply"
keywords = ["interpreter"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
nom = "7.1.1"
